
0.16
======

- added font preference for charts

- Fixed bug that didn't update filelist after deleting a chart

- COT changed filenames for the annual file, updated COT quote plugin to handle old and new names.

- Fixed bug that skipped previous date when calculating MA's.

- Added a compile option to increase speed "-Os".

- Fixed "export" all bug that seg faults when trying to export all charts.

- Added new MA support for Wilder's MA method  and fixed TR function to include first bar. Thanks to Glen for the patch.

- New quote plugin "Ratio". This is a composite that divides two symbols to produce the ratio between them.

- Fixed bug that prevented chart objects with a date parm to draw.

- Oh yeah baby, now we are getting serious, the basic backtesting module now completed. First person that finds the best
  indicator rules to short MSFT and UIS stock to oblivion gets drinks on me. Let the games begin.
  
- Added new dialog to edit chart tick data in place.

0.15
======

- Comprehensive documentation now included in the docs directory. Moved all the docs there.
  Whew! I'd rather stare at the wall than write docmentation. It's finally done.
  
- Ported code to Qt3. There is no backwards compatability with =< Qt2.3

- Simplified the plugin interface with a new design. Much simpler now. Plugin is now the base
  class for all plugins. Had to change all the plugins to accomodate the changes.

- Removed chart plugins and merged them back into Plot code, this was not so
  good an idea. Oh well.

- Added new Quote plugins:
    NYBOT - Used to import NYBOT exchange futures data from an ASCII file.
    Qtstalker - Used to import ASCII files that have been exported using qtstalker's export function.
    COT - Download commitment of traders reports for all major futures.
    CMEHistory - Downloads CME history for the current year only.
    Index - Used for creating and updating custom index composites
    Spread - Used for creating and updating custom spread composites
