@@ -1,0 +1,49 @@
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN"
+      "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+  <title>Qtstalker - Quote Plugin - CSV</title>
+  <meta name="generator" content="amaya 6.1, see http://www.w3.org/Amaya/" />
+</head>
+
+<body>
+<h2>CSV Plugin</h2>
+
+<h3>Description:</h3>
+
+<p>Use local plain-text comma-separated values (CSV) ascii files.
+Perhaps you already have a collection of files in this format ...
+end-of-day data managed as a separate concern by some other application.
+</p>
+
+<p>This plugin can currently import DOHLCV and DOHLCVI field formats,
+and can easily be modified to support other field formats.
+</p>
+
+<p>Here is an example snippet from a DOHLCV file called SBM.AX.txt
+</p>
+<pre>
+...
+20030205,0.120,0.120,0.115,0.120,1129504
+20030206,0.115,0.115,0.100,0.105,2559171
+...
+</pre>
+
+<h3>Input Parameters:</h3>
+<ul>
+  <li>Input - The ASCII file to be imported from your local filesystem.</li>
+  <li>Symbol - If you do not specify a symbol, then the basename part of
+   the filename will be used, e.g. SBM.AX</li>
+</ul>
+
+<p>
+<img alt="screenshot" width="214" height="251" src="csv1.png" />
+<img alt="screenshot" width="406" height="321" src="csv2.png" />
+</p>
+
+<p>Select the file to be imported and press the "update" button.
+Then go to "Working with Graphs" to see your new graph.
+</body>
+</html>
