@@ -1,158 +1,186 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN"
-      "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+       
+  <meta http-equiv="Content-Type"
+ content="text/html; charset=iso-8859-1">
   <title>Qtstalker - Table of Contents</title>
-  <meta name="generator" content="amaya 6.1, see http://www.w3.org/Amaya/" />
+             
+  <meta name="generator"
+ content="amaya 6.1, see http://www.w3.org/Amaya/">
 </head>
-
-<body>
+  <body>
+   
 <h1>Qtstalker: Table of Contents</h1>
-
+    
 <p></p>
-
+    
 <h2>Introduction<span
-style="color: #000000; background-color: #FAFAFA"></span></h2>
+ style="color: rgb(0,0,0); background-color: rgb(250,250,250);"></span></h2>
+   
 <ol>
-  <li><a href="intro.html">What is Qtstalker ?</a><br />
-  </li>
+    <li><a href="intro.html">What is Qtstalker ?</a><br>
+    </li>
+   
 </ol>
-
+    
 <h2>Installation</h2>
+   
 <ol>
-  <li><a href="install.html">How to install Qtstalker.</a></li>
+    <li><a href="install.html">How to install Qtstalker.</a></li>
+   
 </ol>
-
+    
 <h2>Getting Started: A quick howto</h2>
+   
 <ol>
-  <li><a href="quick.html">How do I view a chart ?</a></li>
+    <li><a href="quick.html">How do I view a chart ?</a></li>
+   
 </ol>
-
+    
 <h2>Getting to know Qtstalker</h2>
+   
 <ol>
-  <li><a href="main.html">Main Screen</a></li>
-  <li><a href="title.html">Title Bar</a></li>
-  <li>Menu Bar 
+    <li><a href="main.html">Main Screen</a></li>
+    <li><a href="title.html">Title Bar</a></li>
+    <li>Menu Bar           
     <ol>
-      <li>File Menu 
+        <li>File Menu                   
         <ol>
-          <li><a href="workwithcharts.html">Work with Charts</a></li>
-          <li><a href="workwithgroups.html">Work with Groups</a></li>
-          <li><a href="workwithportfolios.html">Work with Portfolios</a></li>
-          <li>Exit</li>
+            <li><a href="workwithcharts.html">Work with Charts</a></li>
+            <li><a href="workwithgroups.html">Work with Groups</a></li>
+            <li><a href="workwithportfolios.html">Work with Portfolios</a></li>
+           <li><a href="workwithbacktest.html">Work with Backtest</a><br>
+           </li>
+            <li>Exit</li>
+                   
         </ol>
-      </li>
-      <li>Edit Menu 
+        </li>
+        <li>Edit Menu                   
         <ol>
-          <li><a href="newindicator.html">New Indicator</a></li>
-          <li><a href="preferences.html">Edit Preferences</a></li>
+            <li><a href="newindicator.html">New Indicator</a></li>
+            <li><a href="preferences.html">Edit Preferences</a></li>
+                   
         </ol>
-      </li>
-      <li>View Menu 
+        </li>
+        <li>View Menu                   
         <ol>
-          <li><a href="compression.html">Daily Compression</a></li>
-          <li><a href="compression.html">Weekly Compression</a></li>
-          <li><a href="compression.html">Monthly Compression</a></li>
-          <li><a href="charttype.html">Bar</a></li>
-          <li><a href="charttype.html">Paint Bar</a></li>
-          <li><a href="charttype.html">Line</a></li>
-          <li><a href="charttype.html">Candlestick</a></li>
-          <li><a href="charttype.html">Point and Figure</a></li>
-          <li><a href="grid.html">Chart Grid</a></li>
-          <li><a href="grid.html">Scale to Screen</a></li>
-          <li><a href="nextchart.html">Previous Chart</a></li>
-          <li><a href="nextchart.html">Next Chart</a></li>
+            <li><a href="compression.html">Daily Compression</a></li>
+            <li><a href="compression.html">Weekly Compression</a></li>
+            <li><a href="compression.html">Monthly Compression</a></li>
+            <li><a href="charttype.html">Bar</a></li>
+            <li><a href="charttype.html">Paint Bar</a></li>
+            <li><a href="charttype.html">Line</a></li>
+            <li><a href="charttype.html">Candlestick</a></li>
+            <li><a href="charttype.html">Point and Figure</a></li>
+            <li><a href="grid.html">Chart Grid</a></li>
+            <li><a href="grid.html">Scale to Screen</a></li>
+            <li><a href="nextchart.html">Previous Chart</a></li>
+            <li><a href="nextchart.html">Next Chart</a></li>
+                   
         </ol>
-      </li>
-      <li>Plugins Menu 
+        </li>
+        <li>Plugins Menu                   
         <ol>
-          <li><a href="installplugins.html">Install New Plugins</a></li>
+            <li><a href="installplugins.html">Install New Plugins</a></li>
+                   
         </ol>
-      </li>
-      <li>Tools Menu 
+        </li>
+        <li>Tools Menu                   
         <ol>
-          <li><a href="datawindow.html">Data Window</a></li>
-          <li><a href="quotes.html">Quotes</a></li>
+            <li><a href="datawindow.html">Data Window</a></li>
+            <li><a href="quotes.html">Quotes</a></li>
+                   
         </ol>
-      </li>
+        </li>
+           
     </ol>
-  </li>
-  <li><a href="toolbars.html">Toolbars</a></li>
-  <li><a href="mainchart.html">Main Chart Area</a></li>
-  <li><a href="indicatorchart.html">Indicator Area</a></li>
-  <li><a href="statusbar.html">Status Bar</a></li>
-  <li><a href="chartobjects.html">Chart Objects</a></li>
+    </li>
+    <li><a href="toolbars.html">Toolbars</a></li>
+    <li><a href="mainchart.html">Main Chart Area</a></li>
+    <li><a href="indicatorchart.html">Indicator Area</a></li>
+    <li><a href="statusbar.html">Status Bar</a></li>
+    <li><a href="chartobjects.html">Chart Objects</a></li>
+  <li><a href="backtester.html">Back Tester</a></li>
+   
 </ol>
-
+    
 <p></p>
-
+    
 <h2>Quote Plugin Reference</h2>
+   
 <ol>
-  <li><a href="cbot.html">CBOT</a></li>
-  <li><a href="cme.html">CME</a></li>
-  <li><a href="cmehistory.html">CMEHistory</a></li>
-  <li><a href="cot.html">COT</a></li>
-  <li><a href="indexes.html">Index</a></li>
-  <li><a href="nybot.html">NYBOT</a></li>
-  <li><a href="qtstalker.html">Qtstalker</a></li>
-  <li><a href="spread.html">Spread</a></li>
-  <li><a href="yahoo.html">Yahoo</a></li>
-  <li><a href="yahooquote.html">YahooQuote</a></li>
+    <li><a href="cbot.html">CBOT</a></li>
+    <li><a href="cme.html">CME</a></li>
+    <li><a href="cmehistory.html">CMEHistory</a></li>
+    <li><a href="cot.html">COT</a></li>
+    <li><a href="csv.html">CSV</a></li>
+    <li><a href="indexes.html">Index</a></li>
+    <li><a href="nybot.html">NYBOT</a></li>
+    <li><a href="qtstalker.html">Qtstalker</a></li>
+   <li>Ratio<br>
+   </li>
+    <li><a href="spread.html">Spread</a></li>
+    <li><a href="yahoo.html">Yahoo</a></li>
+    <li><a href="yahooquote.html">YahooQuote</a></li>
+   
 </ol>
-
+    
 <p></p>
-
+    
 <h2>Indicator Reference</h2>
+   
 <ol>
-  <li>Accumulation Distribution - AD</li>
-  <li>Average True Range - ATR</li>
-  <li>Bollinger Bands - BB</li>
-  <li>Commodity Channel Index - CCI</li>
-  <li>Detrended Price Oscillator - DPO</li>
-  <li>Directional Movement Index - DMI</li>
-  <li>Envelope - ENV</li>
-  <li>High Low Channel - HLC</li>
-  <li>Moving Average - MA</li>
-  <li>Moving Average Convergence Divergence - MACD</li>
-  <li>Moving Average Oscillator - MAOSC</li>
-  <li>Money Flow - MF</li>
-  <li>Momentum - MOM</li>
-  <li>Moving Average 2 Plot - MA2</li>
-  <li>Moving Average 3 Plot - MA3</li>
-  <li>Negative Volume Index - NVI</li>
-  <li>On Balance Volume - OBV</li>
-  <li>Open Interest - OI</li>
-  <li>Percent Change - PC</li>
-  <li>Performance - PER</li>
-  <li>Pivot Point - PP</li>
-  <li>Positive Volume Index - PVI</li>
-  <li>Price Volume Trend - PVT</li>
-  <li>Rate of Change - ROC</li>
-  <li>Relative Strength Index - RSI</li>
-  <li>Parabolic SAR - SAR</li>
-  <li>Standard Deviation - SD</li>
-  <li>Stochastic - STOCH</li>
-  <li>Stochastic RSI - STOCHRSI</li>
-  <li>TRIX - TRIX</li>
-  <li>Ultimate Oscillator - UO</li>
-  <li>Volume - VOL</li>
-  <li>Volatility Ratio - VOLR</li>
-  <li>Williams Accumulation Distribution - WAD</li>
-  <li>Williams %R - WILLR</li>
+    <li>Accumulation Distribution - AD</li>
+    <li>Average True Range - ATR</li>
+    <li>Bollinger Bands - BB</li>
+    <li>Commodity Channel Index - CCI</li>
+    <li>Detrended Price Oscillator - DPO</li>
+    <li>Directional Movement Index - DMI</li>
+    <li>Envelope - ENV</li>
+    <li>High Low Channel - HLC</li>
+    <li>Moving Average - MA</li>
+    <li>Moving Average Convergence Divergence - MACD</li>
+    <li>Moving Average Oscillator - MAOSC</li>
+    <li>Money Flow - MF</li>
+    <li>Momentum - MOM</li>
+    <li>Moving Average 2 Plot - MA2</li>
+    <li>Moving Average 3 Plot - MA3</li>
+    <li>Negative Volume Index - NVI</li>
+    <li>On Balance Volume - OBV</li>
+    <li>Open Interest - OI</li>
+    <li>Percent Change - PC</li>
+    <li>Performance - PER</li>
+    <li>Pivot Point - PP</li>
+    <li>Positive Volume Index - PVI</li>
+    <li>Price Volume Trend - PVT</li>
+    <li>Rate of Change - ROC</li>
+    <li>Relative Strength Index - RSI</li>
+    <li>Parabolic SAR - SAR</li>
+    <li>Standard Deviation - SD</li>
+    <li>Stochastic - STOCH</li>
+    <li>Stochastic RSI - STOCHRSI</li>
+    <li>TRIX - TRIX</li>
+    <li>Ultimate Oscillator - UO</li>
+    <li>Volume - VOL</li>
+    <li>Volatility Ratio - VOLR</li>
+    <li>Williams Accumulation Distribution - WAD</li>
+    <li>Williams %R - WILLR</li>
+   
 </ol>
-
+    
 <p></p>
-
+    
 <h2><a href="faq.html">Frequently Asked Questions</a></h2>
-
+    
 <p></p>
-
+    
 <p></p>
-
+    
 <p></p>
-
+    
 <p></p>
+  <br>
+ <br>
 </body>
 </html>
