@@ -1,47 +1,52 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN"
-      "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML Basic 1.0//EN" "http://www.w3.org/TR/xhtml-basic/xhtml-basic10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+   
+  <meta http-equiv="Content-Type"
+ content="text/html; charset=iso-8859-1">
   <title>Qtstalker - Introduction</title>
-  <meta name="generator" content="amaya 6.1, see http://www.w3.org/Amaya/" />
+      
+  <meta name="generator"
+ content="amaya 6.1, see http://www.w3.org/Amaya/">
 </head>
-
-<body xml:lang="en" lang="en">
+   <body xml:lang="en" lang="en">
+ 
 <h1>Introduction</h1>
-
+  
 <p></p>
-Qtstalker is a basic end of day Technical Analysis package with many
-features. It compares with similar commercial products like Metastok,
-Superchartz, Tradestation(...maybe one day) etc. If you are familiar with
-those, then you should be able to muddle along with Qtstalker. 
-
-<p>The project has kept to a lean and simple design philosophy in order to
+ Qtstalker is a basic end of day Technical Analysis package with many features.
+It compares with similar commercial products like Metastok, Superchartz,
+Tradestation(...maybe one day) etc. If you are familiar with those, then
+you should be able to muddle along with Qtstalker.   
+<p>The project has kept to a lean and simple design philosophy in order to 
 maximize speed, portability and resource usage.</p>
-
+  
 <p></p>
-
+  
 <h2>Features:</h2>
+ 
 <ul>
-  <li>Dozens of your favorite TA indicators available as plugins like MACD,
+   <li>Dozens of your favorite TA indicators available as plugins like MACD, 
     RSI, MA's, Bollinger Bands etc.</li>
-  <li>5 chart types including line, bar, candlestick, point and figure and
+   <li>5 chart types including line, bar, candlestick, point and figure and 
     paint bars.</li>
-  <li>A really, really, really crappy portfolio manager. Good for tracking
+   <li>A really, really, really crappy portfolio manager. Good for tracking 
     open positions.</li>
-  <li>Quote plugins that download data from many sources like Yahooo, CBOT,
+   <li>Quote plugins that download data from many sources like Yahooo, CBOT, 
     CME, NYBOT etc.</li>
-  <li>Chart drawing objects like trend lines, buy and sell arrows, text,
+   <li>Chart drawing objects like trend lines, buy and sell arrows, text, 
     horizontal and vertical lines, Fibonacci retracement lines.</li>
-  <li>Chart compression types like daily, weekly and monthly.</li>
-  <li>Support for investment types like stock, futures, index and
-  spreads.</li>
-  <li>2 chart scaling formats like scale to screen, and entire data
-  series.</li>
-  <li>Plugin system for quotes and indicators for future extensibility.</li>
+   <li>Chart compression types like daily, weekly and monthly.</li>
+   <li>Support for investment types like stock, futures, index and   spreads.</li>
+   <li>2 chart scaling formats like scale to screen, and entire data   series.</li>
+   <li>Plugin system for quotes and indicators for future extensibility.</li>
+  <li>Back testing functions allowing you to test indicator performance using
+real trading data.</li>
+ 
 </ul>
-
+<br>
+  
 <p></p>
+ <br>
 </body>
 </html>
